<resources>
    <string name="app_name">testAnd</string>
    <string name="ac">AC</string>
    <string name="dot">.</string>
    <string name="del">DEL</string>
    <string name="_3">3</string>
    <string name="equal">=</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="bin">BIN</string>
    <string name="oct">OCT</string>
    <string name="hex">HEX</string>
    <string name="dec">DEC</string>
    <string name="in">IN</string>
    <string name="_11223">11223</string>
    <string name="_4">4</string>
</resources>