<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#fafafa"
    android:paddingStart="@dimen/margenmediem"
    android:paddingEnd="@dimen/margenmediem"
    >
<TextView
    android:id="@+id/inputtext"
    style="@style/inputnumber"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="84dp"
    android:text=""
    android:layout_weight="1"
    android:layout_gravity="start|top"
    android:paddingTop="@dimen/magenlarge"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textColor="@color/black"/>



    <LinearLayout
        android:id="@+id/convertingTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/magennormal"
        android:layout_marginTop="@dimen/margenmediem">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/binBtn"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:layout_marginStart="@dimen/margenmediem"
            android:background="@drawable/btnaction"
            android:text="@string/bin"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/octBtn"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:layout_marginStart="@dimen/margenmediem"
            android:background="@drawable/btnaction"
            android:text="@string/oct"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/decBtn"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:layout_marginStart="@dimen/margenmediem"
            android:background="@drawable/btnaction"
            android:text="@string/dec"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hexbtn"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:layout_marginStart="16dp"
            android:background="@drawable/btnaction"
            android:text="@string/hex"/>
    </LinearLayout>

    <!-- <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#FF0000"
         android:layout_marginBottom="@dimen/smallSpace" />-->

    <LinearLayout
        android:id="@+id/hexButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dijta"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:background="@drawable/btnaction"
            android:text="@string/a"
            android:onClick="onClickNumber"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dijtb"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:background="@drawable/btnaction"
            android:text="@string/b"
            android:onClick="onClickNumber"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dijtc"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:background="@drawable/btnaction"
            android:text="@string/c"
            android:onClick="onClickNumber"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dijtd"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:background="@drawable/btnaction"
            android:text="@string/d"
            android:onClick="onClickNumber"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dijte"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"

            android:background="@drawable/btnaction"
            android:text="@string/e"
            android:onClick="onClickNumber"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dijtf"
            android:layout_width="@dimen/btnSize"
            android:layout_height="@dimen/btnSize"
            android:background="@drawable/btnaction"
            android:text="@string/f"
            android:onClick="onClickNumber"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-28dp">

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center|top"
            android:paddingTop="@dimen/magennormal"
            >

            <LinearLayout
                android:id="@+id/firstRow"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margenmediem"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num9"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="@string/_7"
                    android:layout_marginTop="16dp"
                    android:onClick="onClickNumber"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num4"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="@string/_4"
                    android:layout_marginTop="16dp"
                    android:onClick="onClickNumber"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num1"
                    android:layout_width="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="1"
                    android:layout_marginTop="16dp"
                    android:onClick="onClickNumber"
                    android:layout_height="@dimen/btnSize"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/result"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btnaction"
                    android:text="@string/equal"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondRow"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenmediem"
                android:layout_marginEnd="@dimen/margenmediem"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num8"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="@string/_8"
                    android:layout_marginTop="16dp"
                    android:onClick="onClickNumber"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num5"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btnaction"
                    android:text="5"
                    android:onClick="onClickNumber"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num2"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btnaction"
                    android:text="2"
                    android:onClick="onClickNumber"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/zero"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btnaction"
                    android:text="0"
                    android:onClick="onClickNumber"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenmediem"
                android:layout_marginEnd="@dimen/margenmediem"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num99"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="@string/_9"
                    android:onClick="onClickNumber"
                    android:layout_marginTop="16dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num6"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="6"
                    android:onClick="onClickNumber"
                    android:layout_marginTop="16dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/num3"
                    android:layout_width="@dimen/btnSize"
                    android:layout_height="@dimen/btnSize"
                    android:background="@drawable/btnaction"
                    android:text="@string/_3"
                    android:onClick="onClickNumber"
                    android:layout_marginTop="16dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="56dp"
                    android:layout_height="@dimen/btnSize"

                    android:background="@drawable/btnaction"
                    android:text="@string/del"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>





        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>